...
        context: mainContext!,
        duration: const Duration(seconds: 4),
        builder: (_, controller) {
          return Padding(
            padding: const EdgeInsets.all(20.0),
            child: Flash(
              key: const Key("failFlash"),
              dismissDirections: const [FlashDismissDirection.vertical],
              position: FlashPosition.top,
              controller: controller,
              child: IntrinsicWidth(
                child: FlashBar(
                  behavior: FlashBehavior.floating,
...
        context: context ?? mainContext!,
        duration: const Duration(seconds: 4),
        builder: (_, controller) {
          return Padding(
            padding: const EdgeInsets.all(20.0),
            child: Flash(
              key: const Key("successFlash"),
              dismissDirections: const [FlashDismissDirection.vertical],
              controller: controller,
              child: IntrinsicWidth(
                child: FlashBar(
                  elevation: 2,
                  shape: RoundedRectangleBorder(
...
